# midi-clip-player

./: CMakeLists.txt  README.md  manifest.ttl  plugin.ttl
clips-midi/: bill_couplet.mid  bill_intro.mid  bill_refrain.mid
midi_clip_player.lv2/: plugin.ttl
midi_clip_player.lv2/modgui/: icon.html
src/: midi_clip.h  plugin.c
